# DirectX-12-Raster-From-Scratch

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/BasicSync/: VertexShader.hlsl
Assets/Shaders/Blending/: VertexShader.hlsl
Assets/Shaders/ImGui/: VertexShader.hlsl
Assets/Shaders/Instancing/: PixelShader.hlsl  VertexShader.hlsl
Assets/Shaders/RootConstants/: VertexShader.hlsl
Assets/Shaders/VertexBuffer/: VertexShader.hlsl
Src/: CMakeLists.txt
Src/BasicSynchronizing/: BasicSynchronizing.cpp  WindowApp.cpp
Src/BasicTexture/: main.cpp
Src/Blending/: Blending.cpp  WindowApp.cpp  WindowApp.h
Src/ClearScreen/: ClearScreen.cpp
Src/Common/: CMakeLists.txt  ShaderCompiler.h
Src/Common/Desktop/: Window.h
Src/Common/Graphics/: DescriptorHeap.cpp  DescriptorHeap.h  GUI.cpp  GUI.h
Src/ConstantBuffer/: ConstantBuffer.cpp
Src/DepthTests/: DepthTests.cpp
Src/ImGui/: main.cpp
Src/IndexBuffer/: IndexBuffer.cpp
Src/Instancing/: Instancing.cpp  imgui.ini
Src/Pipeline/: Pipeline.cpp
Src/RootConstants/: RootConstants.cpp  ShaderCompiler.h
Src/VertexBuffer/: VertexBuffer.cpp
